Project-2/LOCOAL/Cluster.namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ets-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: ets-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: ets-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: gym-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: gym-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: gym-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: whatsapp-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: whatsapp-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: whatsapp-prod
